grammar.js
    start: $ => repeat(
      choice(
        $.program_definition,
        //optional($.function_definition) //todo
      )
    ),

    program_definition: $ => prec.right(seq(
      $.identification_division,
      optional($.environment_division),
      optional($.data_division),
      optional($.procedure_division), //todo
      repeat($.end_program), //todo
      //optional($.LINE_PREFIX_COMMENT),
    )),

    identification_division: $ => seq(
      $._IDENTIFICATION, $._DIVISION, '.',
      optional(
        seq($._PROGRAM_ID, '.',
          $.program_name,
          optional(choice(
            $.as_literal,
            $.is_initial,
            $.is_common)),
          '.')),
      repeat(choice(
        $.author_section,
        $.installation_section,
        $.date_written_section,
        $.date_compiled_section,
        $.security_section)),
    ),

    program_name: $ => choice(
      $._WORD,
      $._LITERAL
    ),

    qualified_word: $ => sepBy(
      $.WORD, $._in_of
    ),

    _in_of: $ => choice(
      $._IN,
      $._OF
    ),

    procedure_division: $ => seq(
      $._PROCEDURE, $._DIVISION,
      optional($.procedure_using_chaining),
      optional($.procedure_returning),
      '.',
      optional($.procedure_declaratives),
      optional($._procedure_division_contenet)
    ),

    _procedure_division_contenet: $ => prec.right(choice(
      seq(
        optional($._procedure_division_headers),
        repeat(seq(
          $._procedure_division_statements_before_header,
          $._procedure_division_headers,
        )),
        repeat1($._procedure_division_statement)
      ),
      seq(
        optional($._procedure_division_headers),
        repeat1(seq(
          $._procedure_division_statements_before_header,
          $._procedure_division_headers,
        )),
        repeat($._procedure_division_statement)
      ),
    )),

    period: $ => '.',

    exec_cics_statement: $ => seq(
      $.EXEC,
      $.CICS,
      field('command', $.WORD),
      repeat($._cics_option),
      optional($.cics_unparsed_tail),
      $.END_EXEC
    ),

    // D-28c: an option is a keyword optionally followed by a parenthesised
    // argument. The bare no-parenthesis form is not an edge case — the three
    // most common bare options measure 1,586 / 450 / 438 occurrences.
    //
    // prec.right(1, ...) is the same arbitration idms_record_name uses at
    // line 2431, with an added associativity the IDMS rules did not need.
    // Two distinct ambiguities exist here and both are resolved statically,
    // with no `conflicts:` entry — the grammar still generates a length-0
    // conflicts array:
    //   1. A bare WORD is ambiguous between reducing as an option and as the
    //      first token of cics_unparsed_tail, since both wrap $.WORD. The
    //      precedence of 1 prefers the modelled option; _cics_operand_token
    //      carries none.
    //   2. On seeing '(' after an option keyword, the parser can either shift
    //      into this rule's optional parenthesised argument or reduce the bare
    //      option and let the tail take the '('. Right associativity prefers
    //      the shift, which is the modelled reading: KEYWORD(arg) is one
    //      option, not a bare option followed by unparsed junk.
    //
    // D-21 line: the 25-name corpus-derived option vocabulary is deliberately
    // NOT hard-coded here. This is a generic-dialect grammar; only the four
    // criterion operands get named nodes (added in 03-02). Every other option
    // keyword is just $.WORD.
    _cics_option: $ => prec.right(1, choice(
      // D-21/D-23: the four criterion operands, and ONLY these four, get named
      // nodes. MAPSET is here on its own measured evidence: 610 occurrences,
      // effectively 1:1 with MAP.
      seq($.TRANSID, '(', $.cics_transaction_name, ')'),
      seq($.PROGRAM, '(', $.cics_program_name, ')'),
      seq($.MAP,     '(', $.cics_map_name,       ')'),
      seq($.MAPSET,  '(', $.cics_mapset_name,    ')'),
      seq(
        $.WORD,
        optional(seq('(', $._cics_argument, ')'))
      )
    )),

    // D-21: named rules, NOT field() labels. Two independent forces require
    // this and both are verified:
    //   1. Depth — field() binds only DIRECT children of the declaring rule,
    //      so an operand nested inside an option sub-rule is unreachable to a
    //      query written against exec_cics_statement.
    //   2. The consumer — gortex's runQuery iterates matches and copies
    //      captures with NO predicate evaluation whatsoever, so a
    //      predicate-based query compiles and is then silently ignored,
    //      matching every option against every capture. Predicate-based
    //      extraction fails silently, which is worse than failing loudly.
    //
    // The node names are fixed verbatim by CONTEXT.md as the queries/cics.scm
    // contract; renaming any of them means a coordinated change across the
    // grammar, the published query, the vendored shim and the capture gate.
    //
    // prec(1, ...) mirrors idms_record_name at line 2431: a bare word right
    // after a modelled keyword is ambiguous between reducing as the named
    // operand or as the first token of the tail, both being single-token
    // wrappers over the same underlying token, and static precedence prefers
    // the modelled operand — resolved with no `conflicts:` entry.
    //
    // D-22: each operand body reuses $._cics_argument rather than the IDMS
    // bare-word form, because it must wrap WHATEVER is inside the parens.
    // This is load-bearing: 30 of 33 measured PROGRAM operands are data names,
    // not quoted literals, so a literal-only body would miss 91% of them.
    cics_transaction_name: $ => prec(1, $._cics_argument),

    cics_program_name: $ => prec(1, $._cics_argument),

    cics_map_name: $ => prec(1, $._cics_argument),

    cics_mapset_name: $ => prec(1, $._cics_argument),

    // D-29: all four measured argument forms modelled up front rather than
    // through D-09's minimal-then-census round trip. The census D-09 deferred
    // has already run, and CICS's uniform KEYWORD(arg) syntax made it cheap in
    // a way IDMS's positional formats never were. Measured occurrences
    // (counted during the phase discussion — see RESEARCH A5; these are
    // recorded measurements, not figures re-derivable from this repo):
    //   plain data name    2,041
    //   quoted literal     1,993
    //   LENGTH OF <name>     527
    //   numeric literal       81
    // $._LITERAL already covers both the quoted and numeric forms (it is
    // choice($.number, $._string) at line 3011), so the two literal rows need
    // no separate arm.
    //
    // The subscripted-data-name arm is a fifth form the four measured rows do
    // not name, added on its own evidence: a precise census of the 7,971
    // parenthesised arguments inside the estate's 3,726 EXEC CICS blocks found
    // 54 (0.68%) carrying a nested parenthesis. Without this arm they do not
    // degrade into cics_unparsed_tail as D-19 intends — they parse with a
    // MISSING ")" error-recovery node, which is a defect, not graceful
    // degradation. Subscripting is ordinary COBOL data reference syntax, so
    // modelling it is generic-dialect work and not the site-specific hack
    // D-21 forbids.
    //
    // MEASURED GAP, deliberately left open: 4 of those 7,971 arguments (0.05%)
    // carry a comma, and they are the one construct measured that still yields
    // a hard ERROR node. Left open for two verified reasons:
    //   1. The ERROR is CONTAINED — a fixture with the comma form followed by
    //      two more paragraphs still yields all 3 paragraph_header nodes, so
    //      it does not cascade and CICS-03 is not at risk.
    //   2. Closing it means fighting a pre-existing upstream token bug, not
    //      adding a rule: `integer` is /[+-]?[0-9,]+/ (line 3013), which
    //      matches a BARE COMMA, so the lexer emits `integer` where a ','
    //      token is expected. A comma-list arm therefore does not work as
    //      written, and making it work needs a lexical precedence on a token
    //      shared with every numeric literal in the grammar — an
    //      upstream-owned blast radius wildly out of proportion to 0.05%.
    _cics_argument: $ => choice(
      seq($._LENGTH, optional($._OF), $.WORD),
      $._LITERAL,
      seq($.WORD, '(', choice($._LITERAL, $.WORD), ')'),
      $.WORD
    ),

    // D-19/D-30: the escape hatch. Structure copied from _idms_operand_token /
    // idms_unparsed_tail (line 2441) — a repeat1 over the grammar's own atomic
    // leaves, pure grammar with no external-scanner token.
    //
    // The bounding differs from IDMS and this is the phase's highest residual
    // risk: idms_unparsed_tail bounds at the literal '.', which no leaf in its
    // vocabulary can match, whereas CICS must bound at END-EXEC — a word that
    // matches the _WORD regex (line 3491) in full, making the tail a candidate
    // consumer of its own terminator (RESEARCH Pitfall 1 / A1). Keyword
    // extraction is what arbitrates it: END_EXEC is a valid token in this
    // state, so the lexer prefers the keyword over the WORD fallback and the
    // terminator is consumed as the terminator. Settled by the boundary
    // fixture in test/corpus/exec_cics.txt, not by argument.
    //
    // D-30: this vocabulary MUST NOT be widened until the census reports zero.
    // The tail exists to make the coverage gap countable; tuning it until it
    // stops firing defeats its purpose.
    _cics_operand_token: $ => choice(
      $.WORD,
      $._LITERAL,
      '(',
      ')',
      ','
    ),

    cics_unparsed_tail: $ => repeat1($._cics_operand_token),

    // EXEC SQL (Phase 4, D-01/D-02/D-13/D-18). This is deliberately a
    // bounded extraction grammar: the outer block, SELECT kind, CTE roles,
    // sources and aliases are structured while all other SQL remains visible
    // in sql_unparsed_tail nodes. END-EXEC is required and stays outside the
    // body so recovery cannot consume following COBOL statements.
    exec_sql_statement: $ => seq(
      $.EXEC,
      $.SQL,
      choice(
        seq(optional($.sql_cte_clause), $.sql_select_query),
        $.sql_insert_statement,
        $.sql_update_statement,
        $.sql_delete_statement,
        $.sql_merge_statement,
        $.sql_create_table_statement,
        $.sql_alter_table_statement,
        $.sql_drop_table_statement,
        $.sql_prepare_statement,
        $.sql_declare_cursor_statement,
        seq(
          field('kind', $.WORD),
          repeat($.sql_unparsed_tail)
        )
      ),
      $.END_EXEC
    ),

    // D-09/D-10/D-11: BEGIN and END are independent markers. Data entries
    // remain ordinary siblings in their enclosing section or record list.
    sql_select_query: $ => prec.right(1, seq(
      field('kind', alias($._SELECT, $.WORD)),
      repeat(choice(
        $.sql_source_reference,
        $.sql_nested_query,
        $.sql_unparsed_tail
      ))
    )),

    sql_source_reference: $ => prec.right(2, seq(
      choice($._FROM, $._SQL_JOIN),
      choice(
        $.sql_source_candidate,
        $.sql_nested_query
      )
    )),

    // D-18: this is intentionally a raw candidate. Plan 04-02 assigns it to
    // the smallest enclosing statement range and subtracts same-statement CTE
    // definitions before treating the remaining names as physical tables.
    sql_source_candidate: $ => prec.right(2, seq(
      $.sql_table_name,
      optional($.sql_table_alias)
    )),

    // D-05/D-06: the complete two- or three-part object is one table node;
    // its statement-local alias is a separate sibling node.
    sql_table_name: $ => prec(2, sepBy($._sql_identifier, '.')),

    _sql_identifier: $ => choice(
      $.WORD,
      $._sql_underscore_identifier,
      $.sql_delimited_identifier
    ),

    sql_unparsed_tail: $ => prec(-1, choice(
      $._sql_host_reference,
      $._sql_qualified_reference,
      $._sql_unparsed_token
    )),

    _sql_host_reference: $ => prec.right(1, seq(
      ':',
      sepBy($._sql_identifier, '.')
    )),

    _sql_qualified_reference: $ => prec.right(-1, seq(
      $._sql_identifier,
      '.',
      $._sql_identifier
    )),

    _sql_unparsed_token: $ => choice(
      $.WORD,
      alias($._SELECT, $.WORD),
      $._sql_underscore_identifier,
      $._LITERAL,
      '(',
      ')',
      ',',
      '=',
      '>',
      '<',
      '!',
      '|',
      ':',
      '*',
      '+',
      '-'
    ),

    // SQL-only keywords are private except SQL itself. Keeping them valid only
    // below the two-token EXEC SQL anchor protects ordinary COBOL verbs.
    _SQL_JOIN: $ => /[jJ][oO][iI][nN]/,

    // IDMS DML (Phase 2, D-01). idms_record_name/idms_set_name are named
    // rules rather than field() labels (D-02) so queries/idms.scm matches
    // them at any nesting depth across all four idms_*_statement types.
    _read_statement_header: $ => prec.right(seq(
      $._READ,
      field('file_name', $.WORD),
      field('flag_next', optional(choice($.NEXT, $.PREVIOUS))),
      optional($._RECORD),
      field('into', optional(seq($._INTO, $._identifier))),
      optional($.with_lock),
      field('key', optional(seq(
        $._KEY,
        optional($._IS),
        repeat1($._identifier),
      ))),
    )),

    read_statement: $ => $._read_statement_header,

    write_statement: $ => seq(
      $._write_statement_header,
    ),

    _write_statement_header: $ => seq(
      $._WRITE,
      field('record_name', $.qualified_word),
      field('from', optional(seq($._FROM, $._id_or_lit))),
      field('lock', optional(choice($.write_lock, $.write_no_lock))),
      field('option', optional($.write_option))
    ),

    _LITERAL: $ => choice(
      $.number,
      $._string,
    ),

    //todo
    number: $ => choice($.integer, $.decimal),
    integer: $ => /[+-]?[0-9,]+/,
    _string: $ => choice(
      $.string,
      $.x_string,
      $.n_string,
      $.h_string
    ),

    string: $ => choice(
      /('[^'\n]*')+/,
      /("[^"\n]*")+/,
      $._multiline_string,
    ),

    _DIVISION: $ => /[dD][iI][vV][iI][sS][iI][oO][nN]/,
    _FROM: $ => /[fF][rR][oO][mM]/,
    _IDENTIFICATION: $ => /[iI][dD][eE][nN][tT][iI][fF][iI][cC][aA][tT][iI][oO][nN]/,
    _PROCEDURE: $ => /[pP][rR][oO][cC][eE][dD][uU][rR][eE]/,
    _PROGRAM_ID: $ => /[pP][rR][oO][gG][rR][aA][mM]-[iI][dD]/,
    _SELECT: $ => /[sS][eE][lL][eE][cC][tT]/,
    _WORD: $ => /([0-9][a-zA-Z0-9-]*[a-zA-Z][a-zA-Z0-9-]*)|([a-zA-Z][a-zA-Z0-9-]*)/,
